# acpr

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp  make.sh  notes.txt
include/: aiocp.h  boost_backport.h  libaio.h
report/: acpr_performance.R  presentation.tex  report.tex
src/: aiocp.cpp  boost_backport.cpp  main.cpp
test/: acpr_test.py
test/data/csres/: linux_0ms.csv  linux_10ms.csv  linux_16K.csv  linux_1ms.csv  linux_32K.csv  linux_cb16.csv  linux_cb32.csv  linux_default.csv  linux_threshold4K.csv  linux_threshold8K.csv  lubuntu_0ms.csv  lubuntu_10ms.csv  lubuntu_128K.csv  lubuntu_1ms.csv  lubuntu_256K.csv  lubuntu_512K.csv  lubuntu_default.csv  lubuntu_default_nosync.csv  lubuntu_fallocate-readahead.csv  lubuntu_fallocate-readahead_nosync.csv  notes.txt
test/data/laptop/: linux_0ms.csv  linux_10ms.csv  linux_16K.csv  linux_1ms.csv  linux_32K.csv  linux_cb16.csv  linux_cb32.csv  linux_default.csv  linux_threshold4K.csv  linux_threshold8K.csv  lubuntu_0ms.csv  lubuntu_10ms.csv  lubuntu_128K.csv  lubuntu_1ms.csv  lubuntu_256K.csv  lubuntu_512K.csv  lubuntu_default.csv  lubuntu_fallocate-readahead.csv  notes.txt
test/data/macbook/: linux_0ms.csv  linux_10ms.csv  linux_16K.csv  linux_1ms.csv  linux_32K.csv  linux_cb16.csv  linux_cb32.csv  linux_default.csv  linux_threshold4K.csv  linux_threshold8K.csv  lubuntu_0ms.csv  lubuntu_10ms.csv  lubuntu_128K.csv  lubuntu_1ms.csv  lubuntu_256K.csv  lubuntu_512K.csv  lubuntu_default.csv  lubuntu_fallocate-readahead.csv  notes.txt
